--- a/media-library/libs/ml-ui/src/lib/music/song/songs-grid.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/song/songs-grid.component.html
@@ -1,8 +1,7 @@
 <ag-grid-angular
-  class="ag-theme-balham w-auto"
+  class="ag-theme-balham h-full"
   [rowData]="songs"
   [columnDefs]="colDefs"
-  [domLayout]="'autoHeight'"
   [groupDisplayType]="'singleColumn'"
   [autoGroupColumnDef]="groupColDef"
   [gridOptions]="gridOptions"
