--- a/media-library/libs/ml-ui/src/lib/music/album/album.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/album/album.component.html
@@ -1,1 +1,1 @@
-<button (click)="handleAlbumClick(album.id)">{{album.title}}</button>
+<button mlButton (click)="handleAlbumClick(album.id)">{{album.title}}</button>
