--- a/media-library/libs/ml-ui/src/lib/music/song/songs-grid.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/song/songs-grid.component.html
@@ -7,5 +7,8 @@
   [gridOptions]="gridOptions"
   [suppressCellFocus]="true"
   (gridReady)="gridReady($event)"
-  (rowDataUpdated)="rowDataUpdated($event)">
+  (rowDataUpdated)="rowDataUpdated($event)"
+  [isExternalFilterPresent]="isExternalFilterPresent"
+  [doesExternalFilterPass]="doesExternalFilterPass"
+  (filterChanged)="filterChanged($event)">
 </ag-grid-angular>
