--- a/media-library/apps/ml-app/src/app/pages/app-player-page/app-player-page.component.html
+++ b/media-library/apps/ml-app/src/app/pages/app-player-page/app-player-page.component.html
@@ -1,1 +1,8 @@
-<p>app-player works!</p>
+<div class="flex flex-col h-full">
+  <div class="grow">
+    <ml-media-player></ml-media-player>
+  </div>
+  <div>
+    <ml-player-controls></ml-player-controls>
+  </div>
+</div>
