--- a/media-library/libs/ml-ui/src/lib/music/album/album.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/album/album.component.html
@@ -1,1 +1,7 @@
-<button mlButton (click)="handleAlbumClick(album.id)">{{album.title}}</button>
+<div class="flex flex-col w-[150px] h-[200px] bg-dark text-light p-[10px] gap-[5px]">
+  <div class="w-full grow bg-light"></div>
+  <div class="flex flex-col">
+    <div>{{album.title}}</div>
+    <div>{{artist?.name}}</div>
+  </div>
+</div>
