--- a/media-library/libs/ml-ui/src/lib/music/artist/artist.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/artist/artist.component.html
@@ -1,1 +1,7 @@
-<button mlButton (click)="handleArtistClick(artist.id)">{{artist.name}}</button>
+<div class="flex flex-col w-[150px] h-[200px] bg-dark text-light p-[10px] gap-[5px]">
+  <div class="w-full grow bg-light"></div>
+  <div class="flex flex-col">
+    <div>{{artist.name}}</div>
+    <br />
+  </div>
+</div>
