--- a/media-library/apps/ml-app/src/app/pages/app-music-page/app-music-page.component.html
+++ b/media-library/apps/ml-app/src/app/pages/app-music-page/app-music-page.component.html
@@ -1,16 +1,16 @@
 <ml-tab-group class="block h-full">
-  <ml-tab [headerTemplate]="songsTabHeader" [isSelected]="true" #songsTab>
+  <ml-tab headerText="Songs" [isSelected]="true" #songsTab class="p-[10px]">
     <ml-songs-grid [songs]="songs$ | async" [albums]="albums$ | async" [artists]="artists$ | async" 
       [genres]="genres$ | async" class="overflow-auto" (editSong)="showEditSongModal($event)"
       (addToPlaylist)="showAddSongToPlaylistModal($event)"></ml-songs-grid>
   </ml-tab>
-  <ml-tab headerText="Albums" class="flex gap-[10px] flex-wrap">
+  <ml-tab headerText="Albums" class="flex gap-[10px] flex-wrap p-[10px]">
     <ml-album *ngFor="let album of albums$ | async" [album]="album" [artist]="artists[album.artistId]"
-      (click)="handleAlbumSelect(album.id, songsTab)"></ml-album>
+      (click)="handleAlbumSelect(album.title, songsTab)"></ml-album>
   </ml-tab>
-  <ml-tab headerText="Artists" class="flex gap-[10px] flex-wrap">
+  <ml-tab headerText="Artists" class="flex gap-[10px] flex-wrap p-[10px]">
     <ml-artist *ngFor="let artist of artists$ | async" [artist]="artist" 
-      (click)="handleArtistSelect(artist.id, songsTab)"></ml-artist>
+      (click)="handleArtistSelect(artist.name, songsTab)"></ml-artist>
   </ml-tab>
 </ml-tab-group>
 
@@ -22,15 +22,4 @@
   <ml-add-to-playlist-modal [playlists]="playlists$ | async" [selectedPlaylistIds]="selectedPlaylistIds$ | async" 
     (selectedPlaylistIdsChange)="handlePlaylistIdsChange($event)" [song]="selectedSong$ | async">
   </ml-add-to-playlist-modal>
-</ng-template>
-
-<ng-template mlModal [(isOpen)]="isFilterModalOpen" (isOpenChange)="handleIsOpenChange($event)">
-  <ml-music-filter-modal [albums]="albums$ | async" [artists]="artists$ | async"></ml-music-filter-modal>
-</ng-template>
-
-<ng-template #songsTabHeader>
-  <div class="flex align-middle gap-[5px]">
-    <span>Songs</span>
-    <button mlSecondaryButton [disabled]="!songsTab.isSelected" (click)="showFilterModal()"><fa-icon [icon]="faFilter"></fa-icon></button>
-  </div>
 </ng-template>
