--- a/media-library/libs/ml-ui/src/lib/media-player/media-player.component.html
+++ b/media-library/libs/ml-ui/src/lib/media-player/media-player.component.html
@@ -1,2 +1,9 @@
-<video mlVideoPlayer></video>
-<audio mlAudioPlayer></audio>
+<div>
+  <div>
+    <video mlVideoPlayer></video>
+    <audio mlAudioPlayer></audio>
+  </div>
+  <div>
+    <ml-player-controls></ml-player-controls>
+  </div>
+</div>
