--- a/media-library/libs/ml-ui/src/lib/music/modals/add-to-playlist-modal/add-to-playlist-modal.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/modals/add-to-playlist-modal/add-to-playlist-modal.component.html
@@ -1,7 +1,7 @@
 <ml-modal-content class="w-[450px]">
   <ml-modal-header>
-    <ml-modal-title>
-      <div class="flex">Add&nbsp;<div class="truncate">{{song?.title}}</div>&nbsp;To&nbsp;Playlist(s)</div>
+    <ml-modal-title class="flex whitespace-pre">
+      Add <span class="truncate">{{song?.title}}</span>To Playlist(s)
     </ml-modal-title>
   </ml-modal-header>
   <ml-modal-body>
