--- a/media-library/libs/ml-ui/src/lib/music/modals/edit-song-modal/edit-song-modal.component.html
+++ b/media-library/libs/ml-ui/src/lib/music/modals/edit-song-modal/edit-song-modal.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="songForm">
   <ml-modal-content class="w-[400px]">
     <ml-modal-header>
-      <ml-modal-title>Edit {{song?.title}}</ml-modal-title>
+      <ml-modal-title class="block whitespace-pre truncate">Edit {{song?.title}}</ml-modal-title>
     </ml-modal-header>
     <ml-modal-body class="flex flex-col gap-[10px]">
         <div class="flex flex-col gap-[5px]">
