--- a/media-library/apps/ml-app/src/app/pages/app-music-page/app-music-page.component.html
+++ b/media-library/apps/ml-app/src/app/pages/app-music-page/app-music-page.component.html
@@ -15,7 +15,8 @@
 </ml-tab-group>
 
 <ng-template mlModal [(isOpen)]="isEditModalOpen" (isOpenChange)="handleIsOpenChange($event)">
-  <ml-edit-song-modal [song]="selectedSong$ | async"></ml-edit-song-modal>
+  <ml-edit-song-modal [song]="selectedSong$ | async" [albums]="albums$ | async" [artists]="artists$ | async" 
+    [genres]="genres$ | async"></ml-edit-song-modal>
 </ng-template>
 
 <ng-template mlModal [(isOpen)]="isAddToPlaylistModalOpen" (isOpenChange)="handleIsOpenChange($event)">
