--- a/media-library/libs/ml-ui/src/lib/controls/list-box/list-box-item/list-box-item.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/list-box/list-box-item/list-box-item.component.html
@@ -8,7 +8,7 @@
     <fa-icon [icon]="faPlus"></fa-icon>
     <span class="sr-only">add list item</span>
   </button>
-  <button mlSecondaryButton *ngIf="!readonly && item.isSelected" class="rounded-l-none" [variant]="'danger'" (click)="handleDelete(item.value)" [disabled]="disabled">
+  <button mlSecondaryButton *ngIf="!readonly && item.isSelected" class="rounded-l-none" [variant]="'danger'" (click)="handleRemove(item.value)" [disabled]="disabled">
     <fa-icon [icon]="faTrashCan"></fa-icon>
     <span class="sr-only">delete list item</span>
   </button>
