--- a/media-library/libs/ml-ui/src/lib/controls/list-box/list-box-item/list-box-item.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/list-box/list-box-item/list-box-item.component.html
@@ -2,7 +2,7 @@
   <span class="inline-flex border-dark border-[1px] border-solid rounded-[5px] self-stretch px-[10px]
     text-dark dark:text-light bg-light dark:bg-dark items-center" [ngClass]="{
       'border-r-0 rounded-r-none': !readonly,
-      'text-secondary border-secondary': disabled
+      '!text-secondary !border-secondary': disabled
     }">{{item.name}}</span>
   <button mlSecondaryButton *ngIf="!readonly && !item.isSelected" class="rounded-l-none" (click)="handleAdd(item.value)" [disabled]="disabled">
     <fa-icon [icon]="faPlus"></fa-icon>
