--- a/media-library/libs/ml-ui/src/lib/controls/list-box/list-box-item/list-box-item.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/list-box/list-box-item/list-box-item.component.html
@@ -1,15 +1,15 @@
 <div class="flex items-center h-control">
-  <span class="inline-flex border-dark border-[1px] border-solid rounded-[5px] self-stretch px-[10px]
-    text-dark dark:text-light bg-light dark:bg-dark items-center" [ngClass]="{
-      'border-r-0 rounded-r-none': !readonly,
-      '!text-secondary !border-secondary': disabled
-    }">{{item.name}}</span>
-  <button mlSecondaryButton *ngIf="!readonly && !item.isSelected" class="rounded-l-none" (click)="handleAdd(item.value)" [disabled]="disabled">
+  <button mlSecondaryButton *ngIf="!readonly && !item.isSelected" class="rounded-r-none" (click)="handleAdd(item.value)" [disabled]="disabled">
     <fa-icon [icon]="faSquare"></fa-icon>
     <span class="sr-only">add list item</span>
   </button>
-  <button mlSecondaryButton *ngIf="!readonly && item.isSelected" class="rounded-l-none" (click)="handleRemove(item.value)" [disabled]="disabled">
+  <button mlSecondaryButton *ngIf="!readonly && item.isSelected" class="rounded-r-none" (click)="handleRemove(item.value)" [disabled]="disabled">
     <fa-icon [icon]="faSquareCheck"></fa-icon>
     <span class="sr-only">delete list item</span>
   </button>
+  <span class="inline-flex border-dark border-[1px] border-solid rounded-[5px] self-stretch px-[10px]
+    text-dark dark:text-light bg-light dark:bg-dark items-center" [ngClass]="{
+      'border-l-0 rounded-l-none': !readonly,
+      '!text-secondary !border-secondary': disabled
+    }">{{item.name}}</span>
 </div>
