--- a/media-library/libs/ml-ui/src/lib/controls/breadcrumb-bar/breadcrumb/breadcrumb.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/breadcrumb-bar/breadcrumb/breadcrumb.component.html
@@ -1,1 +1,1 @@
-<span class="cursor-pointer"><ng-content></ng-content></span>
+<span class="cursor-pointer font-bold"><ng-content></ng-content></span>
