--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -1,8 +1,8 @@
 <button type="button" class="flex items-center border-dark border-[1px] border-solid rounded-[5px]
   w-full px-[5px] h-control select-none group-focus/select:ring bg-light dark:bg-dark text-dark dark:text-light
   gap-[5px] group-[.ml-invalid]/select:border-danger group-[.ml-invalid]/select:dark:border-danger-dark focus:ring"
-  (click)="toggleDropdown()" mlPopover [hidden]="!isDropdownOpen" [content]="dropdown" [placement]="'bottom-start'"
-  (blur)="handleBlur()" [appendTo]="dialog || 'body'" [contentContext]="{ $implicit: { internalOptions, internalGroups} }">
+  (click)="toggleDropdown()" mlPopover [hidden]="!isDropdownOpen" [template]="dropdown" [placement]="'bottom-start'"
+  (blur)="handleBlur()" [appendTo]="dialog || 'body'" [templateCtx]="{ $implicit: { internalOptions, internalGroups} }">
   <span class="grow text-left truncate">
     <ng-container *ngIf="selectLabel; else placeholderTemplate">{{selectLabel}}</ng-container>
     <ng-template #placeholderTemplate>
