--- a/media-library/libs/ml-ui/src/lib/configuration/music-configuration/music-configuration-editor/music-configuration-editor.component.html
+++ b/media-library/libs/ml-ui/src/lib/configuration/music-configuration/music-configuration-editor/music-configuration-editor.component.html
@@ -6,7 +6,7 @@
     </ml-modal-header>
     <ml-modal-body class="flex flex-col gap-[10px]">
       <div class="grid grid-flow-col grid-cols-[150px_1fr]">
-        <label mlLabel>Locations</label>
+        <label mlLabel>Music Paths</label>
         <div class="flex gap-[5px] flex-wrap overflow-auto content-start p-[5px]">
           <ml-control-group *ngFor="let musicPath of configuration.musicPaths">
             <div class="grow px-[10px] truncate">{{musicPath}}</div>
