--- a/media-library/libs/ml-ui/src/lib/controls/breadcrumb-bar/breadcrumb-bar.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/breadcrumb-bar/breadcrumb-bar.component.html
@@ -1,6 +1,6 @@
 <div class="flex h-control bg-dark dark:bg-light text-light dark:text-dark rounded-[5px] items-center px-[30px]">
   <div class="grid grid-flow-col auto-cols-auto
-    [&>*:not(:first-child)]:before:content-['>'] [&>*:not(:first-child)]:before:mx-[10px] [&>*]:truncate">
+    [&>*:not(:first-child)]:before:content-['/'] [&>*:not(:first-child)]:before:mx-[10px] [&>*]:truncate">
     <ng-content select="ml-breadcrumb"></ng-content>
   </div>
   <div class="grow"></div>
